Fixed overflow issue occuring when under width of 780px

--- a/src/components/AboutComponent/styles/styles.module.css
+++ b/src/components/AboutComponent/styles/styles.module.css
@@ -73,9 +73,6 @@
         flex-direction: column;
 
     }
-    .aboutHeader{
-
-    }
 
 }
 
